# secure-ga4-bq-template

./: .env.example  .gitignore  .templatesyncignore  CHANGELOG.md  Makefile  README.md  engagement-scope.example.yml  inspection-params.example.yml  pyproject.toml
.ai/: architecture.md  decision-log.md  mission.md  release.md
.github/governance/: repository.json
.github/inheritance/: lock.json  manifest.json
.github/workflows/: ai-review.yml  bq-cost-gate.yml  bq-inspect.yml  ci.yml  codeql.yml  container.yml  iac.yml  labels-sync.yml  release.yml  scorecard.yml  security.yml  template-sync.yml
catalog/: README.md  ga4-sensitivity.yml
docs/: README.md  ai-instruction-files.ja.md  development-handoff.md  glossary.md  roadmap.md  usage.ja.md  usage.md
docs/adr/: 0003-inspection-engine-python-module.md  0004-isolate-ai-report-generation.md  0005-render-remediation-drafts-from-recipes.md  0006-bind-cost-gate-wif-to-trusted-workflow.md  0007-generate-service-packages-from-versioned-profiles.md  0008-adopt-direct-parent-inheritance-contract.md  0009-expose-confirmed-local-governance-apply.md  0010-separate-foundation-and-project-document-ownership.md  0011-record-structured-promoted-column-lineage.md  README.md
docs/api/: README.md  report-ai-cli.md
docs/architecture/: modules.md
infra/: README.md
profiles/: README.md
scripts/: export_dataform_sql.py  github_governance.py  seed-verification-data.sh  template-check.sh  template_inheritance.py
service-packages/: inspection-standard.yml
src/: README.md
transform/: workflow_settings.yaml
(+166 files in other folders)
